export type Item = {
  id: string;
  title: string;
  description: string;
};

export const items: Item[] = [
  { id: "1", title: "Item one", description: "Description of item one" },
  { id: "2", title: "Item two", description: "Description of item two" },
  { id: "3", title: "Item three", description: "Description of item three" },
];
