appId: ${APP_ID}
---
- launchApp:
    clearState: true
- tapOn:
    id: items-settings-link
- tapOn:
    id: settings-language-pt-button
- assertVisible: Idioma
